--- a/www/contacts.html
+++ b/www/contacts.html
@@ -1,72 +1,65 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Индивидуальный пошив галстуков-бабочек</title>
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <div class="header-wrap">
-            <a href="#" class="main-logo">Butterfly</a>
-            <nav class="menu j-menu">
-              <ul>
-                <li>
-                  <a href="catalog.html">каталог</a>
-                </li>
-                <li>
-                  <a href="reviews.html">отзывы</a>
-                </li>
-                <li>
-                  <a href="contacts.html">контакты</a>
-                </li>
-                <li>
-                  <a href="faq.html">faq</a>
-                </li>
-              </ul>
-            </nav>
-            <button class="burger j-burger">menu</button>
-          </div>
-        </div>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Индивидуальный пошив галстуков-бабочек</title>
+  <link rel="stylesheet" href="style/style.css" />
+</head>
 
-    <main class="main">
-      <section class="contacts">
-        <div class="contacts-inner">
-          <h2 class="contacts-title">Наши работы</h2>
-
-          <ul class="tabs">
-            <li class="tabs-item">
-              <a href="#" class="tabs-link j-tabs-link active"
-                >Санкт-Петербург</a
-              >
+<body>
+  <header class="header">
+    <div class="header-inner">
+      <div class="header-wrap">
+        <a href="index.html" class="main-logo">Butterfly</a>
+        <nav class="menu j-menu">
+          <ul>
+            <li>
+              <a href="catalog.html">каталог</a>
             </li>
-            <li class="tabs-item">
-              <a href="#" class="tabs-link j-tabs-link">Москва</a>
+            <li>
+              <a href="reviews.html">отзывы</a>
             </li>
-            <li class="tabs-item">
-              <a href="#" class="tabs-link j-tabs-link">Великий Новгород</a>
+            <li>
+              <a href="contacts.html" class="contacts-active">контакты</a>
+            </li>
+            <li>
+              <a href="faq.html">faq</a>
             </li>
           </ul>
-          <div class="tabs-info">
-            <div class="contacts-item j-contacts-item active">
-              <div class="contacts-info">
-                <p>Спасский переулок, д. 14</p>
-                <p>Тел.: +7 812 800-8080</p>
-                <p>Пн-Пт с 9-00 до 22-00</p>
-              </div>
-              <div class="contacts-visual">
-                <img
-                  src="images/contacts-map.png"
-                  alt="Местоположение магазина"
-                  class="contacts-map"
-                />
-              </div>
+        </nav>
+        <button class="burger j-burger">menu</button>
+      </div>
+    </div>
+  </header>
+
+  <main class="main">
+    <section class="contacts">
+      <div class="contacts-inner">
+        <h2 class="contacts-title">Наши работы</h2>
+
+        <ul class="tabs">
+          <li class="tabs-item">
+            <a href="#" class="tabs-link j-tabs-link active">Санкт-Петербург</a>
+          </li>
+          <li class="tabs-item">
+            <a href="#" class="tabs-link j-tabs-link">Москва</a>
+          </li>
+          <li class="tabs-item">
+            <a href="#" class="tabs-link j-tabs-link">Великий Новгород</a>
+          </li>
+        </ul>
+        <div class="tabs-info">
+          <div class="contacts-item j-contacts-item active">
+            <div class="contacts-info">
+              <p>Спасский переулок, д. 14</p>
+              <a href="tel:+78128008080" class="contacts-number">Тел.: +7 812 800-8080</a>
+              <p>Пн-Пт с 9-00 до 22-00</p>
+            </div>
+            <div class="contacts-visual">
+              <img src="images/contacts-map.png" alt="Местоположение магазина" class="contacts-map" />
+            </div>
           </div>
           <div class="tabs-info">
             <div class="contacts-item j-contacts-item">
@@ -76,88 +69,74 @@
                 <p>Пн-Пт с 9-00 до 22-00</p>
               </div>
               <div class="contacts-visual">
-                <img
-                  src="images/contacts-map.png"
-                  alt="Местоположение магазина"
-                  class="contacts-map"
-                />
+                <img src="images/contacts-map.png" alt="Местоположение магазина" class="contacts-map" />
               </div>
             </div>
           </div>
           <div class="tabs-info">
-            <div class="contacts-item j-contacts-item"><div class="contacts-info">
-              <p>Спасский , д. 14</p>
-              <p>Тел.: +7 812 800-8080</p>
-              <p>Пн-Пт с 9-00 до 22-00</p>
+            <div class="contacts-item j-contacts-item">
+              <div class="contacts-info">
+                <p>Спасский , д. 14</p>
+                <p>Тел.: +7 812 800-8080</p>
+                <p>Пн-Пт с 9-00 до 22-00</p>
+              </div>
+              <div class="contacts-visual">
+                <img src="images/contacts-map.png" alt="Местоположение магазина" class="contacts-map" />
+              </div>
             </div>
-            <div class="contacts-visual">
-              <img
-                src="images/contacts-map.png"
-                alt="Местоположение магазина"
-                class="contacts-map"
-              />
-            </div></div>
           </div>
         </div>
-      </section>
+    </section>
 
-      <section class="lead">
-        <div class="lead-inner">
-          <h2>Закажи пошив</h2>
-          <p>
-            Заполните форму- наш мастер свяжется с вами, согласует удобное
-            времяя для встречи. На встречи он снимет мерки и поможет
-            определиться с тканью.
-          </p>
-          <form action="#" class="form">
-            <div class="form-field">
-              <label for="name" class="form-label">Ваше имя</label>
-              <input name="name" id="name" type="text" class="form-input" />
-            </div>
-            <div class="form-field">
-              <label for="phone" class="form-label">Телефон</label>
-              <input type="text" name="phone" id="phone" class="form-input" />
-            </div>
-            <div class="form-field form-button">
-              <button class="btn" type="submit">Заказать</button>
-            </div>
-          </form>
-        </div>
-      </section>
-    </main>
+    <section class="lead">
+      <div class="lead-inner">
+        <h2 class="lead-title">Закажи пошив</h2>
+        <p class="lead-text">
+          Заполните форму- наш мастер свяжется с вами, согласует удобное
+          времяя для встречи. На встречи он снимет мерки и поможет
+          определиться с тканью.
+        </p>
+        <form action="#" class="form">
+          <div class="form-field">
+            <label for="name" class="form-label">Ваше имя</label>
+            <input name="name" id="name" type="text" class="form-input" />
+          </div>
+          <div class="form-field">
+            <label for="phone" class="form-label">Телефон</label>
+            <input type="text" name="phone" id="phone" class="form-input" />
+          </div>
+          <div class="form-field form-button">
+            <button class="btn-lead" type="submit">Заказать</button>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
 
-    <footer class="footer">
-      <div class="footer-inner">
-        <div class="footer-wrap">
+  <footer class="footer">
+    <div class="footer-inner">
+      <div class="footer-wrap">
+        <div class="footer-cont">
           <a href="#" class="foot-logo">Butterfly</a>
-
-          <div class="footer-social">
-            <div class="footer-phone">
-              <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
-            </div>
-
-            <a
-              href="#"
-              style="background-image: url(images/socials/inst.svg)"
-              class="social-items"
-            >
-            </a>
-            <a
-              href="#"
-              style="background-image: url(images/socials/fcb.svg)"
-              class="social-items"
-            >
-            </a>
-            <a
-              href="#"
-              style="background-image: url(images/socials/tlg.svg)"
-              class="social-items"
-            ></a>
+          <div class="footer-phone">
+            <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
           </div>
+        </div>
+
+        <div class="footer-social">
+          <a href="#" style="background-image: url(images/socials/inst.svg)" title="Мы в Instagramm"
+            class="social-items">
+          </a>
+          <a href="#" style="background-image: url(images/socials/fcb.svg)" title="Мы в Facebook" class="social-items">
+          </a>
+          <a href="#" style="background-image: url(images/socials/tlg.svg)" title="Мы в Telegramm"
+            class="social-items"></a>
         </div>
       </div>
-    </footer>
-    <script src="scripts/jquery-3.6.0.min.js"></script>
-    <script src="scripts/script.js"></script>
-  </body>
+    </div>
+  </footer>
+  <script src="scripts/jquery-3.6.0.min.js"></script>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
