--- a/www/faq.html
+++ b/www/faq.html
@@ -9,31 +9,29 @@
 
   <body>
     <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <div class="header-wrap">
-            <a href="#" class="main-logo">Butterfly</a>
-            <nav class="menu j-menu">
-              <ul>
-                <li>
-                  <a href="catalog.html">каталог</a>
-                </li>
-                <li>
-                  <a href="reviews.html">отзывы</a>
-                </li>
-                <li>
-                  <a href="contacts.html">контакты</a>
-                </li>
-                <li>
-                  <a href="faq.html">faq</a>
-                </li>
-              </ul>
-            </nav>
-            <button class="burger j-burger">menu</button>
-          </div>
+      <div class="header-inner">
+        <div class="header-wrap">
+          <a href="index.html" class="main-logo">Butterfly</a>
+          <nav class="menu j-menu">
+            <ul>
+              <li>
+                <a href="catalog.html">каталог</a>
+              </li>
+              <li>
+                <a href="reviews.html">отзывы</a>
+              </li>
+              <li>
+                <a href="contacts.html">контакты</a>
+              </li>
+              <li>
+                <a href="faq.html" class="faq-active">faq</a>
+              </li>
+            </ul>
+          </nav>
+          <button class="burger j-burger">menu</button>
         </div>
       </div>
-    </header>
+  </header>
 
     <main class="main">
       <section class="faq">
@@ -41,59 +39,51 @@
           <h2 class="faq-title">Как мы работаем</h2>
 
           <div class="faq-list">
-            <div class="list-option">
-              <div class="list-info">
-                <p class="faq-info">Как можно оплатить заказ?</p>
-                <button class="faq-burger j-faq-burger1">menu</button>
+            <div class="faq-item">
+              <button class="faq-btn j-faq-btn">Как можно оплатить заказ?</button>
+              <div class="faq-answer j-faq-answer">
+                <p class="faq-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta iste maxime quod, sequi enim quam
+                  maiores ipsam amet totam culpa. Suscipit voluptatem optio sapiente maxime deleniti provident delectus
+                  quas dolore!</p>
               </div>
-              <p class="desc j-desc1">нал безнал</p>
             </div>
-
-            <div class="list-option">
-              <div class="list-info">
-                <p class="faq-info">Как получить готовый заказ?</p>
-                <button class="faq-burger j-faq-burger2">menu</button>
+            <div class="faq-item">
+              <button class="faq-btn j-faq-btn">Как получить готовый заказ?</button>
+              <div class="faq-answer j-faq-answer">
+                <p class="faq-item-text"> Принимая во внимание показатели успешности, реализация
+                  намеченных плановых заданий является качественно новой ступенью
+                  распределения внутренних резервов и ресурсов. В частности,
+                  перспективное планирование в значительной степени обусловливает
+                  важность укрепления моральных ценностей. Имеется спорная точка
+                  зрения, гласящая примерно следующее: независимые государства
+                  представлены в исключительно положительном свете. Сложно
+                  сказать, почему активно развивающиеся страны третьего мира, вне
+                  зависимости от их уровня, должны быть разоблачены. <br><br> Учитывая
+                  ключевые сценарии поведения, понимание сути ресурсосберегающих
+                  технологий требует определения и уточнения модели развития.
+                  Также как высокое качество позиционных исследований требует
+                  анализа поставленных обществом задач. А ещё интерактивные
+                  прототипы будут призваны к ответу.</p>
               </div>
-              <p class="desc j-desc2">
-                Принимая во внимание показатели успешности, реализация
-                намеченных плановых заданий является качественно новой ступенью
-                распределения внутренних резервов и ресурсов. В частности,
-                перспективное планирование в значительной степени обусловливает
-                важность укрепления моральных ценностей. Имеется спорная точка
-                зрения, гласящая примерно следующее: независимые государства
-                представлены в исключительно положительном свете. Сложно
-                сказать, почему активно развивающиеся страны третьего мира, вне
-                зависимости от их уровня, должны быть разоблачены. <br><br> Учитывая
-                ключевые сценарии поведения, понимание сути ресурсосберегающих
-                технологий требует определения и уточнения модели развития.
-                Также как высокое качество позиционных исследований требует
-                анализа поставленных обществом задач. А ещё интерактивные
-                прототипы будут призваны к ответу.
-              </p>
             </div>
-
-            <div class="list-option">
-              <div class="list-info">
-                <p class="faq-info">Как можно оплатить услуги ремонта?</p>
-                <button class="faq-burger j-faq-burger3">menu</button>
+            <div class="faq-item">
+              <button class="faq-btn j-faq-btn">Как можно оплатить услуги ремонта?</button>
+              <div class="faq-answer j-faq-answer">
+                <p class="faq-item-text">Принимая во внимание показатели успешности, реализация
+                  намеченных плановых заданий является качественно новой ступенью
+                  распределения внутренних резервов и ресурсов. В частности,
+                  перспективное планирование в значительной степени обусловливает
+                  важность укрепления моральных ценностей. Имеется спорная точка
+                  зрения, гласящая примерно следующее: независимые государства
+                  представлены в исключительно положительном свете. Сложно
+                  сказать, почему активно развивающиеся страны третьего мира, вне
+                  зависимости от их уровня, должны быть разоблачены. <br><br> Учитывая
+                  ключевые сценарии поведения, понимание сути ресурсосберегающих
+                  технологий требует определения и уточнения модели развития.
+                  Также как высокое качество позиционных исследований требует
+                  анализа поставленных обществом задач. А ещё интерактивные
+                  прототипы будут призваны к ответу.</p>
               </div>
-
-              <p class="desc j-desc3">
-                Принимая во внимание показатели успешности, реализация
-                намеченных плановых заданий является качественно новой ступенью
-                распределения внутренних резервов и ресурсов. В частности,
-                перспективное планирование в значительной степени обусловливает
-                важность укрепления моральных ценностей. Имеется спорная точка
-                зрения, гласящая примерно следующее: независимые государства
-                представлены в исключительно положительном свете. Сложно
-                сказать, почему активно развивающиеся страны третьего мира, вне
-                зависимости от их уровня, должны быть разоблачены. <br><br> Учитывая
-                ключевые сценарии поведения, понимание сути ресурсосберегающих
-                технологий требует определения и уточнения модели развития.
-                Также как высокое качество позиционных исследований требует
-                анализа поставленных обществом задач. А ещё интерактивные
-                прототипы будут призваны к ответу.
-              </p>
             </div>
           </div>
         </div>
@@ -101,8 +91,8 @@
 
       <section class="lead">
         <div class="lead-inner">
-          <h2>Закажи пошив</h2>
-          <p>
+          <h2 class="lead-title">Закажи пошив</h2>
+          <p class="lead-text">
             Заполните форму- наш мастер свяжется с вами, согласует удобное
             времяя для встречи. На встречи он снимет мерки и поможет
             определиться с тканью.
@@ -117,7 +107,7 @@
               <input type="text" name="phone" id="phone" class="form-input" />
             </div>
             <div class="form-field form-button">
-              <button class="btn" type="submit">Заказать</button>
+              <button class="btn-lead" type="submit">Заказать</button>
             </div>
           </form>
         </div>
@@ -127,30 +117,21 @@
     <footer class="footer">
       <div class="footer-inner">
         <div class="footer-wrap">
-          <a href="#" class="foot-logo">Butterfly</a>
-
-          <div class="footer-social">
+          <div class="footer-cont">
+            <a href="#" class="foot-logo">Butterfly</a>
             <div class="footer-phone">
               <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
             </div>
-
-            <a
-              href="#"
-              style="background-image: url(images/socials/inst.svg)"
-              class="social-items"
-            >
+          </div>
+  
+          <div class="footer-social">
+            <a href="#" style="background-image: url(images/socials/inst.svg)" title="Мы в Instagramm"
+              class="social-items">
             </a>
-            <a
-              href="#"
-              style="background-image: url(images/socials/fcb.svg)"
-              class="social-items"
-            >
+            <a href="#" style="background-image: url(images/socials/fcb.svg)" title="Мы в Facebook" class="social-items">
             </a>
-            <a
-              href="#"
-              style="background-image: url(images/socials/tlg.svg)"
-              class="social-items"
-            ></a>
+            <a href="#" style="background-image: url(images/socials/tlg.svg)" title="Мы в Telegramm"
+              class="social-items"></a>
           </div>
         </div>
       </div>
