--- a/www/index.html
+++ b/www/index.html
@@ -1,142 +1,132 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Индивидуальный пошив галстуков-бабочек</title>
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <div class="header-wrap">
-            <a href="index.html" class="main-logo">Butterfly</a>
-            <nav class="menu j-menu">
-              <ul>
-                <li>
-                  <a href="catalog.html">каталог</a>
-                </li>
-                <li>
-                  <a href="reviews.html">отзывы</a>
-                </li>
-                <li>
-                  <a href="contacts.html">контакты</a>
-                </li>
-                <li>
-                  <a href="faq.html">faq</a>
-                </li>
-              </ul>
-            </nav>
-            <button class="burger j-burger">menu</button>
-          </div>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Индивидуальный пошив галстуков-бабочек</title>
+  <link rel="stylesheet" href="style/style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="header-inner">
+      <div class="header-wrap">
+        <a href="index.html" class="main-logo">Butterfly</a>
+        <nav class="menu j-menu">
+          <ul>
+            <li>
+              <a href="catalog.html">каталог</a>
+            </li>
+            <li>
+              <a href="reviews.html">отзывы</a>
+            </li>
+            <li>
+              <a href="contacts.html">контакты</a>
+            </li>
+            <li>
+              <a href="faq.html">faq</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="burger j-burger">menu</button>
       </div>
-    </header>
+    </div>
+  </header>
+  <main class="main">
+    <section class="promo">
+      <div class="promo-inner">
+        <h1 class="promo-title">
+          Индвидуальный пошив<br />
+          галстуков-бабочек
+        </h1>
+        <a href="#" class="promo-btn">Заказать бабочку</a>
+      </div>
+    </section>
 
-    <main class="main">
-      <section class="promo">
-        <div class="promo-inner">
-          <h1>
-            Индвидуальный пошив<br />
-            галстуков-бабочек
-          </h1>
-          <a href="#" class="btn promo-btn">Заказать бабочку</a>
-        </div>
-      </section>
-
-      <section class="features">
-        <div class="features-inner">
-          <h2 class="features-title">Наши работы</h2>
-          <div class="features-butterfly">
-            <div class="features-card">
-              <a href="#" class="card">
-                <img src="../images/butterfly-1.png" alt="Бабочка такая" />
-                <span>Бабочка такая</span>
-              </a>
-            </div>
-            <div class="features-card">
-              <a href="#" class="card">
-                <img src="../images/butterfly-2.png" alt="Бабочка растакая" />
-                <span>Бабочка растакая</span>
-              </a>
-            </div>
-            <div class="features-card">
-              <a href="#" class="card">
-                <img src="../images/butterfly-3.png" alt="Бабочка сякая" />
-                <span>Бабочка сякая</span>
-              </a>
-            </div>
-            <div class="features-card">
-              <a href="#" class="card">
-                <img src="../images/butterfly-4.png" alt="Кривая" />
-                <span>Кривая</span>
-              </a>
-            </div>
+    <section class="features">
+      <div class="features-inner">
+        <h2 class="features-title">Наши работы</h2>
+        <div class="features-list">
+          <div class="features-card">
+            <a href="#" class="card">
+              <img src="images/butterfly-1.png" alt="Бабочка такая" />
+              <span class="images-title">Бабочка такая</span>
+            </a>
           </div>
-
-          <a href="#" class="btn btn-features">Все бабочки</a>
+          <div class="features-card">
+            <a href="#" class="card">
+              <img src="images/butterfly-2.png" alt="Бабочка растакая" />
+              <span class="images-title">Бабочка растакая</span>
+            </a>
+          </div>
+          <div class="features-card">
+            <a href="#" class="card">
+              <img src="images/butterfly-3.png" alt="Бабочка сякая" />
+              <span class="images-title">Бабочка сякая</span>
+            </a>
+          </div>
+          <div class="features-card">
+            <a href="#" class="card">
+              <img src="images/butterfly-4.png" alt="Кривая" />
+              <span class="images-title">Кривая</span>
+            </a>
+          </div>
         </div>
-      </section>
 
-      <section class="lead">
-        <div class="lead-inner">
-          <h2>Закажи пошив</h2>
-          <p>
-            Заполните форму- наш мастер свяжется с вами, согласует удобное
-            времяя для встречи. На встречи он снимет мерки и поможет
-            определиться с тканью.
-          </p>
-          <form action="#" class="form">
-            <div class="form-field">
-              <label for="name" class="form-label">Ваше имя</label>
-              <input name="name" id="name" type="text" class="form-input" />
-            </div>
-            <div class="form-field">
-              <label for="phone" class="form-label">Телефон</label>
-              <input type="text" name="phone" id="phone" class="form-input" />
-            </div>
-            <div class="form-field form-button">
-              <button class="btn" type="submit">Заказать</button>
-            </div>
-          </form>
-        </div>
-      </section>
-    </main>
+        <a href="#" class="btn-features">Все бабочки</a>
+      </div>
+    </section>
 
-    <footer class="footer">
-      <div class="footer-inner">
-        <div class="footer-wrap">
+    <section class="lead">
+      <div class="lead-inner">
+        <h2 class="lead-title">Закажи пошив</h2>
+        <p class="lead-text">
+          Заполните форму- наш мастер свяжется с вами, согласует удобное
+          времяя для встречи. На встречи он снимет мерки и поможет
+          определиться с тканью.
+        </p>
+        <form action="#" class="form">
+          <div class="form-field">
+            <label for="name" class="form-label">Ваше имя</label>
+            <input name="name" id="name" type="text" class="form-input" />
+          </div>
+          <div class="form-field">
+            <label for="phone" class="form-label">Телефон</label>
+            <input type="text" name="phone" id="phone" class="form-input" />
+          </div>
+          <div class="form-field form-button">
+            <button class="btn-lead" type="submit">Заказать</button>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer-inner">
+      <div class="footer-wrap">
+        <div class="footer-cont">
           <a href="#" class="foot-logo">Butterfly</a>
-
-          <div class="footer-social">
-            <div class="footer-phone">
-              <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
-            </div>
-
-            <a
-              href="#"
-              style="background-image: url(images/socials/inst.svg)"
-              class="social-items"
-            >
-            </a>
-            <a
-              href="#"
-              style="background-image: url(images/socials/fcb.svg)"
-              class="social-items"
-            >
-            </a>
-            <a
-              href="#"
-              style="background-image: url(images/socials/tlg.svg)"
-              class="social-items"
-            ></a>
+          <div class="footer-phone">
+            <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
           </div>
         </div>
+
+        <div class="footer-social">
+          <a href="#" style="background-image: url(images/socials/inst.svg)" title="Мы в Instagramm"
+            class="social-items">
+          </a>
+          <a href="#" style="background-image: url(images/socials/fcb.svg)" title="Мы в Facebook" class="social-items">
+          </a>
+          <a href="#" style="background-image: url(images/socials/tlg.svg)" title="Мы в Telegramm"
+            class="social-items"></a>
+        </div>
       </div>
-    </footer>
-    <script src="scripts/jquery-3.6.0.min.js"></script>
-    <script src="scripts/script.js"></script>
-  </body>
+    </div>
+  </footer>
+  <script src="scripts/jquery-3.6.0.min.js"></script>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
