--- a/www/faq.html
+++ b/www/faq.html
@@ -1,142 +1,145 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Индивидуальный пошив галстуков-бабочек</title>
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="header-inner">
-        <div class="header-wrap">
-          <a href="index.html" class="main-logo">Butterfly</a>
-          <nav class="menu j-menu">
-            <ul>
-              <li>
-                <a href="catalog.html">каталог</a>
-              </li>
-              <li>
-                <a href="reviews.html">отзывы</a>
-              </li>
-              <li>
-                <a href="contacts.html">контакты</a>
-              </li>
-              <li>
-                <a href="faq.html" class="faq-active">faq</a>
-              </li>
-            </ul>
-          </nav>
-          <button class="burger j-burger">menu</button>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Индивидуальный пошив галстуков-бабочек</title>
+  <link rel="stylesheet" href="style/style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="header-inner">
+      <div class="header-wrap">
+        <a href="index.html" class="main-logo">Butterfly</a>
+        <nav class="menu j-menu">
+          <ul>
+            <li>
+              <a href="catalog.html">каталог</a>
+            </li>
+            <li>
+              <a href="reviews.html">отзывы</a>
+            </li>
+            <li>
+              <a href="contacts.html">контакты</a>
+            </li>
+            <li>
+              <a href="faq.html" class="faq-active">faq</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="burger j-burger">menu</button>
       </div>
+    </div>
   </header>
 
-    <main class="main">
-      <section class="faq">
-        <div class="faq-inner">
-          <h2 class="faq-title">Как мы работаем</h2>
+  <main class="main">
+    <section class="faq">
+      <div class="faq-inner">
+        <h2 class="faq-title">Как мы работаем</h2>
 
-          <div class="faq-list">
-            <div class="faq-item">
-              <button class="faq-btn j-faq-btn">Как можно оплатить заказ?</button>
-              <div class="faq-answer j-faq-answer">
-                <p class="faq-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta iste maxime quod, sequi enim quam
-                  maiores ipsam amet totam culpa. Suscipit voluptatem optio sapiente maxime deleniti provident delectus
-                  quas dolore!</p>
-              </div>
-            </div>
-            <div class="faq-item">
-              <button class="faq-btn j-faq-btn">Как получить готовый заказ?</button>
-              <div class="faq-answer j-faq-answer">
-                <p class="faq-item-text"> Принимая во внимание показатели успешности, реализация
-                  намеченных плановых заданий является качественно новой ступенью
-                  распределения внутренних резервов и ресурсов. В частности,
-                  перспективное планирование в значительной степени обусловливает
-                  важность укрепления моральных ценностей. Имеется спорная точка
-                  зрения, гласящая примерно следующее: независимые государства
-                  представлены в исключительно положительном свете. Сложно
-                  сказать, почему активно развивающиеся страны третьего мира, вне
-                  зависимости от их уровня, должны быть разоблачены. <br><br> Учитывая
-                  ключевые сценарии поведения, понимание сути ресурсосберегающих
-                  технологий требует определения и уточнения модели развития.
-                  Также как высокое качество позиционных исследований требует
-                  анализа поставленных обществом задач. А ещё интерактивные
-                  прототипы будут призваны к ответу.</p>
-              </div>
-            </div>
-            <div class="faq-item">
-              <button class="faq-btn j-faq-btn">Как можно оплатить услуги ремонта?</button>
-              <div class="faq-answer j-faq-answer">
-                <p class="faq-item-text">Принимая во внимание показатели успешности, реализация
-                  намеченных плановых заданий является качественно новой ступенью
-                  распределения внутренних резервов и ресурсов. В частности,
-                  перспективное планирование в значительной степени обусловливает
-                  важность укрепления моральных ценностей. Имеется спорная точка
-                  зрения, гласящая примерно следующее: независимые государства
-                  представлены в исключительно положительном свете. Сложно
-                  сказать, почему активно развивающиеся страны третьего мира, вне
-                  зависимости от их уровня, должны быть разоблачены. <br><br> Учитывая
-                  ключевые сценарии поведения, понимание сути ресурсосберегающих
-                  технологий требует определения и уточнения модели развития.
-                  Также как высокое качество позиционных исследований требует
-                  анализа поставленных обществом задач. А ещё интерактивные
-                  прототипы будут призваны к ответу.</p>
-              </div>
+        <div class="faq-list">
+          <div class="faq-item">
+            <button class="faq-btn j-faq-btn">Как можно оплатить заказ? </button>
+            <div class="faq-answer j-faq-answer">
+              <p class="faq-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta iste maxime quod,
+                sequi enim quam
+                maiores ipsam amet totam culpa. Suscipit voluptatem optio sapiente maxime deleniti provident delectus
+                quas dolore!</p>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section class="lead">
-        <div class="lead-inner">
-          <h2 class="lead-title">Закажи пошив</h2>
-          <p class="lead-text">
-            Заполните форму- наш мастер свяжется с вами, согласует удобное
-            времяя для встречи. На встречи он снимет мерки и поможет
-            определиться с тканью.
-          </p>
-          <form action="#" class="form">
-            <div class="form-field">
-              <label for="name" class="form-label">Ваше имя</label>
-              <input name="name" id="name" type="text" class="form-input" />
-            </div>
-            <div class="form-field">
-              <label for="phone" class="form-label">Телефон</label>
-              <input type="text" name="phone" id="phone" class="form-input" />
-            </div>
-            <div class="form-field form-button">
-              <button class="btn-lead" type="submit">Заказать</button>
-            </div>
-          </form>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="footer-inner">
-        <div class="footer-wrap">
-          <div class="footer-cont">
-            <a href="#" class="foot-logo">Butterfly</a>
-            <div class="footer-phone">
-              <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+          <div class="faq-item">
+            <button class="faq-btn j-faq-btn">Как получить готовый заказ?</button>
+            <div class="faq-answer j-faq-answer">
+              <p class="faq-item-text"> Принимая во внимание показатели успешности, реализация
+                намеченных плановых заданий является качественно новой ступенью
+                распределения внутренних резервов и ресурсов. В частности,
+                перспективное планирование в значительной степени обусловливает
+                важность укрепления моральных ценностей. Имеется спорная точка
+                зрения, гласящая примерно следующее: независимые государства
+                представлены в исключительно положительном свете. Сложно
+                сказать, почему активно развивающиеся страны третьего мира, вне
+                зависимости от их уровня, должны быть разоблачены. <br><br> Учитывая
+                ключевые сценарии поведения, понимание сути ресурсосберегающих
+                технологий требует определения и уточнения модели развития.
+                Также как высокое качество позиционных исследований требует
+                анализа поставленных обществом задач. А ещё интерактивные
+                прототипы будут призваны к ответу.</p>
             </div>
           </div>
-  
-          <div class="footer-social">
-            <a href="#" style="background-image: url(images/socials/inst.svg)" title="Мы в Instagramm"
-              class="social-items">
-            </a>
-            <a href="#" style="background-image: url(images/socials/fcb.svg)" title="Мы в Facebook" class="social-items">
-            </a>
-            <a href="#" style="background-image: url(images/socials/tlg.svg)" title="Мы в Telegramm"
-              class="social-items"></a>
+          <div class="faq-item">
+            <button class="faq-btn j-faq-btn">Как можно оплатить услуги ремонта?</button>
+            <div class="faq-answer j-faq-answer">
+              <p class="faq-item-text">Принимая во внимание показатели успешности, реализация
+                намеченных плановых заданий является качественно новой ступенью
+                распределения внутренних резервов и ресурсов. В частности,
+                перспективное планирование в значительной степени обусловливает
+                важность укрепления моральных ценностей. Имеется спорная точка
+                зрения, гласящая примерно следующее: независимые государства
+                представлены в исключительно положительном свете. Сложно
+                сказать, почему активно развивающиеся страны третьего мира, вне
+                зависимости от их уровня, должны быть разоблачены. <br><br> Учитывая
+                ключевые сценарии поведения, понимание сути ресурсосберегающих
+                технологий требует определения и уточнения модели развития.
+                Также как высокое качество позиционных исследований требует
+                анализа поставленных обществом задач. А ещё интерактивные
+                прототипы будут призваны к ответу.</p>
+            </div>
           </div>
         </div>
       </div>
-    </footer>
-    <script src="scripts/jquery-3.6.0.min.js"></script>
-    <script src="scripts/script.js"></script>
-  </body>
+    </section>
+
+    <section class="lead">
+      <div class="lead-inner">
+        <h2 class="lead-title">Закажи пошив</h2>
+        <p class="lead-text">
+          Заполните форму- наш мастер свяжется с вами, согласует удобное
+          времяя для встречи. На встречи он снимет мерки и поможет
+          определиться с тканью.
+        </p>
+        <form action="#" class="form">
+          <div class="form-field">
+            <label for="name" class="form-label">Ваше имя</label>
+            <input name="name" id="name" type="text" class="form-input" />
+          </div>
+          <div class="form-field">
+            <label for="phone" class="form-label">Телефон</label>
+            <input type="text" name="phone" id="phone" class="form-input" />
+          </div>
+          <div class="form-field form-button">
+            <button class="btn-lead" type="submit">Заказать</button>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer-inner">
+      <div class="footer-wrap">
+        <div class="footer-cont">
+          <a href="#" class="foot-logo">Butterfly</a>
+          <div class="footer-phone">
+            <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+          </div>
+        </div>
+
+        <div class="footer-social">
+          <a href="#" style="background-image: url(images/socials/inst.svg)" title="Мы в Instagramm"
+            class="social-items">
+          </a>
+          <a href="#" style="background-image: url(images/socials/fcb.svg)" title="Мы в Facebook" class="social-items">
+          </a>
+          <a href="#" style="background-image: url(images/socials/tlg.svg)" title="Мы в Telegramm"
+            class="social-items"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="scripts/jquery-3.6.0.min.js"></script>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
