--- a/www/contacts.html
+++ b/www/contacts.html
@@ -37,7 +37,7 @@
   <main class="main">
     <section class="contacts">
       <div class="contacts-inner">
-        <h2 class="contacts-title">Наши работы</h2>
+        <h2 class="contacts-title">Контакты</h2>
 
         <ul class="tabs">
           <li class="tabs-item">
@@ -116,21 +116,20 @@
   <footer class="footer">
     <div class="footer-inner">
       <div class="footer-wrap">
+        <a href="#" class="foot-logo">Butterfly</a>
         <div class="footer-cont">
-          <a href="#" class="foot-logo">Butterfly</a>
-          <div class="footer-phone">
-            <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+          <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+          <div class="footer-social">
+            <a href="#" style="background-image: url(images/socials/inst.svg)" title="Мы в Instagramm"
+              class="social-items">
+            </a>
+            <a href="#" style="background-image: url(images/socials/fcb.svg)" title="Мы в Facebook"
+              class="social-items">
+            </a>
+            <a href="#" style="background-image: url(images/socials/tlg.svg)" title="Мы в Telegramm"
+              class="social-items"></a>
           </div>
-        </div>
 
-        <div class="footer-social">
-          <a href="#" style="background-image: url(images/socials/inst.svg)" title="Мы в Instagramm"
-            class="social-items">
-          </a>
-          <a href="#" style="background-image: url(images/socials/fcb.svg)" title="Мы в Facebook" class="social-items">
-          </a>
-          <a href="#" style="background-image: url(images/socials/tlg.svg)" title="Мы в Telegramm"
-            class="social-items"></a>
         </div>
       </div>
     </div>
