--- a/www/reviews.html
+++ b/www/reviews.html
@@ -61,7 +61,7 @@
               <div class="carousel-item">
                 <div class="caorusel-info">
                   <div class="carousel-info-img">
-                    <img src="../images/stathem.png" alt="" class="carousel-image">
+                    <img src="../images/stathem.png" alt="" class="carousel-image carousel-image-brd ">
                   </div>
                   <div class="carousel-info-text">
                     <strong class="caorusel-caption">Джейсон Стэтхэм</strong>
@@ -79,7 +79,7 @@
                 <div class="caorusel-color-block"></div>
                 <div class="caorusel-info">
                   <div class="carousel-info-img">
-                    <img src="../images/djony.png" alt="" class="carousel-image">
+                    <img src="../images/djony.png" alt="" class="carousel-image carousel-image-brd">
                   </div>
                   <div class="carousel-info-text">
                     <strong class="caorusel-caption">Джонни Депп</strong>
@@ -124,21 +124,20 @@
   <footer class="footer">
     <div class="footer-inner">
       <div class="footer-wrap">
+        <a href="#" class="foot-logo">Butterfly</a>
         <div class="footer-cont">
-          <a href="#" class="foot-logo">Butterfly</a>
-          <div class="footer-phone">
-            <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+          <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+          <div class="footer-social">
+            <a href="#" style="background-image: url(images/socials/inst.svg)" title="Мы в Instagramm"
+              class="social-items">
+            </a>
+            <a href="#" style="background-image: url(images/socials/fcb.svg)" title="Мы в Facebook"
+              class="social-items">
+            </a>
+            <a href="#" style="background-image: url(images/socials/tlg.svg)" title="Мы в Telegramm"
+              class="social-items"></a>
           </div>
-        </div>
 
-        <div class="footer-social">
-          <a href="#" style="background-image: url(images/socials/inst.svg)" title="Мы в Instagramm"
-            class="social-items">
-          </a>
-          <a href="#" style="background-image: url(images/socials/fcb.svg)" title="Мы в Facebook" class="social-items">
-          </a>
-          <a href="#" style="background-image: url(images/socials/tlg.svg)" title="Мы в Telegramm"
-            class="social-items"></a>
         </div>
       </div>
     </div>
